--- a/src/views/404page.ejs
+++ b/src/views/404page.ejs
@@ -23,9 +23,9 @@
         alt="Image"
       />
     </h1>
-    <p class="lead text-danger">
-      Only recruiters are allowed to access this page. Please log in as a
-      recruiter to continue.
-    </p>
+    <% if(errorMessage) { %>
+
+    <p class="lead text-danger"><%= errorMessage %></p>
+    <% } %>
   </div>
 </div>
