--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,6 +10,16 @@
       </h2>
       <h5 class="white-text mb-3">Get Discovered. Get Hired.</h5>
       <span>
+        <% if(locals.userEmail) { %>
+        <button
+          type="button"
+          class="btn btn-primary btn-lg m-2"
+          data-bs-toggle="modal"
+          data-bs-target="#register-modal"
+        >
+          i'm a job recruiter
+        </button>
+        <% } else { %>
         <a href="/jobs"
           ><button type="button" class="btn btn-primary btn-lg">
             i'm a job seeker
@@ -23,6 +33,7 @@
         >
           i'm a job recruiter
         </button>
+        <% } %>
       </span>
     </div>
 
@@ -54,6 +65,7 @@
                 type="text"
                 class="form-control"
                 id="register-name"
+                name="name"
                 placeholder="Enter your name"
                 required
               />
@@ -64,6 +76,7 @@
                 type="email"
                 class="form-control"
                 id="register-email"
+                name="email"
                 placeholder="Enter your email"
                 required
               />
@@ -74,6 +87,7 @@
                 type="password"
                 class="form-control"
                 id="register-password"
+                name="password"
                 placeholder="Enter your password"
                 required
               />
@@ -88,6 +102,7 @@
           <!-- -->
         </div>
         <div class="modal-footer d-flex justify-content-between">
+          <% if(!locals.userEmail){ %>
           <h6>
             Already registered?
             <button
@@ -99,6 +114,7 @@
               login
             </button>
           </h6>
+          <% } %>
           <div id="social-icons">
             <i class="fa-brands fa-twitter twitter fs-4"></i>
             <i class="fa-brands fa-instagram instagram fs-4"></i>
@@ -113,6 +129,7 @@
   <!-- Register Modal Code -->
 
   <!-- Login Modal -->
+  <% if(!locals.userEmail) { %>
   <div class="modal fade" id="login-modal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -126,7 +143,7 @@
           ></button>
         </div>
         <div class="modal-body">
-          <form>
+          <form action="/login" method="post">
             <div class="mb-3">
               <label for="login-email" class="form-label custom-label"
                 >Email</label
@@ -135,6 +152,7 @@
                 type="login-email"
                 class="form-control"
                 id="login-email"
+                name="email"
                 placeholder="enter the email"
                 required
               />
@@ -147,6 +165,7 @@
                 type="password"
                 class="form-control"
                 id="login-password"
+                name="password"
                 placeholder="enter the password"
                 required
               />
@@ -164,5 +183,6 @@
       </div>
     </div>
   </div>
+  <% } %>
   <!-- Login Modal Ends Here -->
 </div>
