--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -62,6 +62,27 @@
             <li class="nav-item">
               <a class="nav-link" href="/jobs">Jobs</a>
             </li>
+            <% if(locals.userEmail) { %>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <%=locals.userName%>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/logout">Logout</a></li>
+
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="/postjob">Post New Job</a>
+                </li>
+              </ul>
+            </li>
+            <% } else{ %>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -81,6 +102,7 @@
                 </li>
               </ul>
             </li>
+            <% } %>
           </ul>
           <form class="d-flex" role="search">
             <input
