--- a/src/views/jobs.ejs
+++ b/src/views/jobs.ejs
@@ -2,6 +2,7 @@
   class="container-fluid pt-5 pb-5 bg-color-jobs d-flex align-items-start justify-content-evenly flex-wrap"
 >
   <!-- Job Card -->
+  <% allJobs.forEach((job)=>{ %>
   <div
     class="card border border-2 bg-transparent bg-gradient m-3 jobs-card"
     style="width: 320px"
@@ -14,36 +15,43 @@
       >
         Actively hiring <i class="fa-solid fa-chart-line i-color"></i>
       </button>
-      <h2 class="bg-primary fw-bold text-light mb-3">Coding Ninjas</h2>
+      <h2 class="fw-bold fs-4 text-warning mb-3"><%=job.company%></h2>
       <span class="d-flex"
-        ><h3 class="text-light">Tech</h3>
-        <h3 class="text-primary ml-2">SDE</h3></span
+        ><h3 class="text-light fs-5"><%=job.category%></h3>
+        <h3 class="text-primary fs-5"><%=job.designation%></h3></span
       >
     </div>
     <!-- Header Ends Here -->
     <!-- Card Body -->
-    <div class="card-body p-4 pb-2">
-      <h5 class="text-light fw-bold pb-4">
-        <i class="fa-solid fa-location-dot"></i> gurgaon HR IND Remote
+    <div class="card-body p-4 pb-4">
+      <h5 class="text-light fw-bold mb-4 fs-6">
+        <i class="fa-solid fa-location-dot"></i> <%=job.location%>
       </h5>
-      <h5 class="text-light fw-bold pb-4">
-        <i class="fa-solid fa-indian-rupee-sign"></i> 20lpa
+      <h5 class="text-light fw-bold mb-3 fs-6">
+        <i class="fa-solid fa-indian-rupee-sign"></i> <%=job.salary%>
       </h5>
-      <div id="skills">
-        <button type="button" class="btn btn-outline-info mb-2">REACT</button>
-        <button type="button" class="btn btn-outline-info mb-2">NODEJS</button>
-        <button type="button" class="btn btn-outline-info mb-2">JS</button>
-        <button type="button" class="btn btn-outline-info mb-2">SQL</button>
-        <button type="button" class="btn btn-outline-info mb-2">MONGODB</button>
-        <button type="button" class="btn btn-outline-info mb-2">EXPRESS</button>
-        <button type="button" class="btn btn-outline-info mb-2">AWS</button>
-      </div>
+<!-- Skills -->
+<div id="skills" class="d-flex flex-wrap m-1">
+  <% if (Array.isArray(job.skills)) {
+    job.skills.forEach((skill) => { %>
+      <button type="button" class="btn btn-outline-info mb-2 me-2">
+        <%= skill %>
+      </button>
+    <% });
+  } else { %>
+    <button type="button" class="btn btn-outline-info mb-2 me-2">
+      <%= job.skills %>
+    </button>
+  <% } %>
+</div>
+<!--  -->
+
     </div>
     <!-- Card Body Ends Here -->
     <!-- View Details -->
     <div>
       <a
-        href="/jobs/job-page"
+        href="/jobs/job-page/<%= job.id %>"
         class="d-flex justify-content-center text-decoration-none"
       >
         <button
@@ -57,5 +65,6 @@
     </div>
     <!-- View Details Ends Here -->
   </div>
+  <% }) %>
   <!-- Job Card Ends Here -->
 </div>
