--- a/src/views/applicants.ejs
+++ b/src/views/applicants.ejs
@@ -10,32 +10,29 @@
       </tr>
     </thead>
     <tbody>
+      <% if (job.applicants && Array.isArray(job.applicants) &&
+      job.applicants.length > 0) { job.applicants.forEach((applicant) => { %>
       <tr class="bg-light">
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <th scope="row"><%= applicant.id %></th>
+        <td><%= applicant.name %></td>
+        <td><%= applicant.email %></td>
+        <td><%= applicant.contact %></td>
         <td>
-          <button type="button" class="btn btn-primary btn-sm">View</button>
+          <a
+            href="/applicant-resume/<%= applicant.id %>"
+            target="_blank"
+            class="btn btn-primary btn-sm"
+            >View</a
+          >
         </td>
       </tr>
+      <% }); %> <% } else { %>
       <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-        <td>
-          <button type="button" class="btn btn-primary btn-sm">View</button>
+        <td colspan="5" class="text-center">
+          No applicants found for this job.
         </td>
       </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-        <td>
-          <button type="button" class="btn btn-primary btn-sm">View</button>
-        </td>
-      </tr>
+      <% } %>
     </tbody>
   </table>
 </div>
