--- a/src/views/job-page.ejs
+++ b/src/views/job-page.ejs
@@ -1,13 +1,3 @@
-<!-- Job card style -->
-<style>
-  .jobcard {
-    border-radius: 10px;
-    box-shadow: 0px 2px 8px 0px rgb(99 99 99 / 20%);
-    border-top: 5px solid #181642 !important;
-    border-left: 3px solid #181642 !important;
-  }
-</style>
-
 <!--  -->
 <div class="container">
   <!--  -->
@@ -71,8 +61,8 @@
         >
         <span class="text-danger"
           ><i class="fa-solid fa-user-group"></i
-          ><a class="text-decoration-none text-danger" href="/applicants">
-            Applicants 1</a
+          ><a class="text-decoration-none text-danger" href="/applicants/<%=job.id%>">
+            Applicants <%= job.applicants ? job.applicants.length : 0 %></a
           >
         </span>
       </div>
@@ -115,7 +105,6 @@
     <!--  -->
 
     <!-- Apply Now -->
-
     <!-- Modal -->
     <div
       class="modal fade"
@@ -142,7 +131,7 @@
             <div class="card m-2 jobcard">
               <div class="card-body">
                 <!-- Form -->
-                <form>
+                <form action="/postApplyJob/<%=job.id %>" method="post" enctype="multipart/form-data">
                   <h3 class="fw-light pb-1">apply in less than 1 minute</h3>
                   <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
@@ -172,12 +161,12 @@
                     </div>
                   </div>
                   <div class="mb-3">
-                    <label for="phone-number" class="form-label">Contact</label>
+                    <label for="contact" class="form-label">Contact</label>
                     <input
-                      type="number"
+                      type="tel"
                       class="form-control"
-                      id="phone-number"
-                      name="phone-number"
+                      id="contact"
+                      name="contact"
                       placeholder="+91 _ _ _ _ _ _ _ _ _ _"
                       required
                     />
