--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -105,12 +105,13 @@
             </li>
             <% } %>
           </ul>
-          <form class="d-flex" role="search">
+          <form class="d-flex" role="search" action="/search" method="get">
             <input
               class="form-control me-2"
               type="search"
-              placeholder="Search"
+              placeholder="Search like : SDE"
               aria-label="Search"
+              name="query"
             />
             <button class="btn btn-outline-success" type="submit">
               Search
