--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -25,21 +25,15 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
     <!--  -->
 
     <!-- CSS -->
-
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="login.css" />
     <!--  -->
     <title>Easily</title>
   </head>
-  <body>
+  <body style="background-color: #dfc7f8">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black navbar-color">
       <div class="container-fluid">
@@ -123,5 +117,13 @@
     <!--  -->
     <!-- Placeholder for rendring Ejs views -->
     <%-body%>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+    <!--  -->
   </body>
 </html>
