--- a/src/views/applicants.ejs
+++ b/src/views/applicants.ejs
@@ -19,7 +19,7 @@
         <td><%= applicant.contact %></td>
         <td>
           <a
-            href="/applicant-resume/<%= applicant.id %>"
+            href="/applicant-resume/<%= applicant.email %>"
             target="_blank"
             class="btn btn-primary btn-sm"
             >View</a
