--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,7 +19,7 @@
     <div class="left m-2 p-2">
       <h1 class="main-heading mb-4">A comprehensive platform for reliable</h1>
       <h2 class="white-text mb-4 h2-animation">
-        job opportunities and internships.
+        Job opportunities and internships.
       </h2>
       <h5 class="white-text mb-3">Get Discovered. Get Hired.</h5>
       <span>
@@ -49,7 +49,7 @@
 
   <!-- Register Modal Code -->
   <div class="modal fade" id="register-modal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
           <h2 class="modal-title">Experience easily</h2>
