--- a/src/views/job-page.ejs
+++ b/src/views/job-page.ejs
@@ -1,5 +1,23 @@
 <!--  -->
 <div class="container">
+  <!-- Notifications -->
+  <% if (notification) { %>
+    <div id="notification" class="alert alert-success alert-dismissible fade show m-2" role="alert">
+        <%= notification %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
+    <script>
+        // Auto dismiss the alert after 5 seconds
+        setTimeout(function() {
+            const alert = document.getElementById('notification');
+            const bsAlert = new bootstrap.Alert(alert);
+            bsAlert.close();
+        }, 5000);
+    </script>
+  <% } %>
+  <!--  -->
+
   <!--  -->
   <div class="card mb-3 mt-2">
     <!-- Job Image -->
@@ -20,7 +38,7 @@
 
     <!-- Recruiter Functions -->
     <% if(locals.userEmail) { %>
-    <div class="d-flex m-2">
+    <div class="d-flex ms-2">
       <button type="button" class="btn btn-info ms-2">
         Actively Hiring <i class="fa-solid fa-chart-line i-color ms-1"></i>
       </button>
@@ -199,7 +217,6 @@
             >
               Close
             </button>
-            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
