Some bugs fixed in this commit brother

--- a/src/views/post-new-job.ejs
+++ b/src/views/post-new-job.ejs
@@ -123,7 +123,7 @@
               />
             </div>
 
-            <button type="submit mb-3" class="btn btn-success btn-block w-100">
+            <button type="submit" class="btn btn-success btn-block w-100">
               Post Job
             </button>
           </form>
