Applicants resume view bug fixed

--- a/src/views/applicants.ejs
+++ b/src/views/applicants.ejs
@@ -19,7 +19,7 @@
         <td><%= applicant.contact %></td>
         <td>
           <a
-            href="/applicant-resume/<%= applicant.email %>"
+            href="/applicant-resume/<%= applicant.email %>/<%= job.id %>"
             target="_blank"
             class="btn btn-primary btn-sm"
             >View</a
